--- a/src/app/modules/inicio/pages/inicio/inicio.component.html
+++ b/src/app/modules/inicio/pages/inicio/inicio.component.html
@@ -1,23 +1,32 @@
-<div *ngFor="let i of info" class="div">
-  <mat-card class="example-card">
-    <!--titulo-->
-    <mat-card-header>
-      <mat-card-title>{{i.titulo}}</mat-card-title>
-    </mat-card-header>
-  <!--imagen-->
-    <img mat-card-image src="{{i.imagen}}" alt="{{i.alt}}" width="250">
-    <mat-card-content>
-      <!--Descripcion-->
-      <p>
-        {{i.descripcion}}
-      
-      </p>
 
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
-    </mat-card-actions>
-  </mat-card>
-    
+<div class="container">
+
+
+
+  <div *ngFor="let i of info" class="div contenido " >
+    <mat-card class="example-card">
+      <!--titulo-->
+      <mat-card-header>
+        <mat-card-title>{{i. nombre}}</mat-card-title>
+      </mat-card-header>
+    <!--imagen-->
+      <img mat-card-image src="{{i.imagen}}" alt="{{i.alt}}" width="250">
+      <mat-card-content>
+        <!--Descripcion-->
+        <p>
+          {{i.descripcion}}
+          {{i.raza}}
+          {{i.edad}}
+        
+        </p>
+  
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button>LIKE</button>
+        <button mat-button>SHARE</button>
+      </mat-card-actions>
+    </mat-card>
+      
+  </div>
+
 </div>
