--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -11,10 +11,8 @@
    <button mat-button routerLink="/nosotros">Nosotros</button>
  
 
-   <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-     <mat-icon>favorite</mat-icon>
+   <button mat-icon-button routerLink="/register">
+     <mat-icon>person</mat-icon>
    </button>
-   <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-    <mat-icon>share</mat-icon>
-  </button>
+ 
  </mat-toolbar>
